Add role authorisation

--- a/eJournal/src/main/resources/application.properties
+++ b/eJournal/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.mvc.view.prefix=/authorisation
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
